Fix broken highcharts speedometer; Fix login page layout on mobile device; Fix speedometer and text position on User Information Page

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -5,6 +5,11 @@ body {
 	font-size: 1.4em;
 }
 
+.center-box {
+	margin: 0 auto;
+	max-width: 800px;
+}
+
 .white-title {
 	color: white;
 	font-family: courier arial;
@@ -23,7 +28,7 @@ body {
 	min-width: 250px;
 	max-width: 400px;
 	height: 300px;
-	margin: 10px auto;
+	margin: 10px 0;
 	background-color: #00b3b3;
 }
 .speedometer-tag {
